# Test

./: CMakeLists.txt  Cell.cpp  Cell.h  Factory.cpp  Factory.h  FormulaCell.cpp  FormulaCell.h  IntOperand.cpp  IntOperand.h  Makefile  NoneCell.cpp  NoneCell.h  NumberCell.cpp  NumberCell.h  Operand.cpp  Operand.h  Parser.cpp  Parser.h  README.md  ReversePolandNotation.cpp  ReversePolandNotation.h  Source.cpp  StringCell.cpp  StringCell.h  StringOperand.cpp  StringOperand.h  Test.7z  Test.sln  Test.vcxproj  Test.vcxproj.filters  UserInterface.cpp  UserInterface.h  Variant.cpp  Variant.h  usrlib.cpp  usrlib.h
Debug/: Test.ilk  source.obj.enc  vc140.idb
Debug/Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
